fix: Compilation issue